# secure-mcp-grpc

./: CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  setup.sh
.cursor/rules/: pydantic-python-project.mdc  secure-mcp-grpc.mdc
.github/workflows/: ci.yml
config/: server.yaml
config/grafana/provisioning/dashboards/: mcp-dashboard.json
config/prometheus/: prometheus.yml
docker/: dashboard.Dockerfile  docker-compose.yml  server.Dockerfile
docs/: comprehensive-blog-post.md  cursor-ai-settings.md  getting-started.md
scripts/: lint.sh
secure_mcp_grpc/: .gitignore.txt  setup.sh
secure_mcp_grpc/dashboard/: app.py  visualization.py
secure_mcp_grpc/proto/: mcp.proto  telemetry.proto
secure_mcp_grpc/server/: secure-server.py  security_config.py  security_middleware.py
secure_mcp_grpc/telemetry/: interaction-tracer.py
tests/: __init__.py  conftest.py  test_security.py
tests/benchmarks/: test_performance.py
tests/integration/: test_security.py
